package builder;

/**
 * The class Product.
 * 产品
 *
 * @author GungnirLaevatain
 * @version 2019 -05-21 23:41:03
 * @since JDK 11
 */
public class Product {
    private String name;
    private String part;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getPart() {
        return part;
    }

    public void setPart(String part) {
        this.part = part;
    }
}
